Fix wall align of table

--- a/frontend/src/app/pages/wall/wall.component.scss
+++ b/frontend/src/app/pages/wall/wall.component.scss
@@ -20,6 +20,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    margin-right: 20px;
   }
 
   .avatarWinner {
@@ -179,6 +180,13 @@
     width: 100%;
   }
 
+  .same-line{
+    display:inline-block;
+    vertical-align:middle;
+  }
 
+  h3{
+    margin-bottom: 0;
+  }
 
   ///
